--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>PERFECT DIGITAL NETWORK – Pending Payments</title>
+<title>PERFECT DIGITAL NETWORK – Pending Payments (Code X2)</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 <style>
   :root{
@@ -56,7 +56,7 @@
     </div>
 
     <div class="tableWrap">
-      <table id="dataTable" role="table">
+      <table id="dataTable" role="table" aria-label="Pending payments">
         <thead id="tableHead"></thead>
         <tbody id="tableBody"></tbody>
       </table>
@@ -92,130 +92,304 @@
 </div>
 
 <script>
-const SHEETDB_API='https://sheetdb.io/api/v1/zla8gcygz4jgd';
-const canonical=["clientname","mobile","amount","date","status","remark"];
+/* ---------------- CONFIG ----------------
+   Replace SHEETDB_API if different.
+   This File = Code X2 candidate (header mapping fixed).
+*/
+const SHEETDB_API = 'https://sheetdb.io/api/v1/zla8gcygz4jgd';
 
-function norm(s){
-  return String(s||'').toLowerCase().replace(/\s+/g,'').replace(/[_\\-]+/g,'').replace(/[^a-z0-9]/g,'');
+/* canonical fields we expect (Code X1 base) */
+const CANONICAL = ['clientname','mobile','amount','date','status','remark'];
+
+/* normalize key helper */
+function normKey(s){
+  return String(s||'').toLowerCase().replace(/[^a-z0-9]/g,'');
 }
 
-let lastData=[],headerMap={};
+/* state */
+let rawRows = [];
+let headerMap = {}; // canonical -> actual sheet key (or canonical if missing)
+let refreshTimer = null;
+let filterPending = false;
 
-// --- FIXED detectHeaders (no wrong fallback) ---
-function detectHeaders(data){
-  headerMap={};
-  const keysList=canonical;
-  if(data && data.length){
-    const keys=Object.keys(data[0]);
-    const lookup={};
-    keys.forEach(k=>lookup[norm(k)]=k);
-    const variants={
+/* ----------- robust detectHeaders (SAFE) -----------
+   — only map canonical -> actual key if confident match exists
+   — otherwise map canonical -> canonical (so POST creates new column)
+*/
+function detectHeaders(rows){
+  headerMap = {};
+  if(Array.isArray(rows) && rows.length){
+    const keys = Object.keys(rows[0]);
+    const lookup = {};
+    keys.forEach(k => lookup[normKey(k)] = k);
+
+    const variants = {
       clientname:['clientname','client','name','client_name','client name'],
-      mobile:['mobile','phone','phonenumber','mobilephone','mobile_number'],
-      amount:['amount','amt','price'],
+      mobile:['mobile','phone','phonenumber','mobilephone','mobile_number','phone_number'],
+      amount:['amount','amt','price','amt_inr'],
       date:['date','duedate','due_date','billingdate'],
-      status:['status','paymentstatus','st'],
+      status:['status','paymentstatus','st','payment_status'],
       remark:['remark','remarks','note','notes']
     };
-    keysList.forEach(c=>{
-      if(lookup[norm(c)]){headerMap[c]=lookup[norm(c)];return;}
-      let found=null;
-      const vs=variants[c]||[c];
-      for(const v of vs){if(lookup[norm(v)]){found=lookup[norm(v)];break;}}
-      if(found) headerMap[c]=found;
-      else headerMap[c]=c; // safe default (prevents mis-mapping)
+
+    CANONICAL.forEach(c => {
+      // exact normalized match first
+      if(lookup[normKey(c)]) { headerMap[c] = lookup[normKey(c)]; return; }
+
+      // try variants
+      let found = null;
+      const vs = variants[c] || [c];
+      for(const v of vs){
+        if(lookup[normKey(v)]){ found = lookup[normKey(v)]; break; }
+      }
+      if(found){
+        headerMap[c] = found;
+      } else {
+        // SAFE fallback: don't reuse sheet columns — map to canonical, so POST will create that column.
+        headerMap[c] = c;
+      }
     });
   } else {
-    keysList.forEach(c=>headerMap[c]=c);
+    // no rows yet — map canonical->canonical
+    CANONICAL.forEach(c => headerMap[c] = c);
   }
 }
 
+/* safe cell access */
+function getCell(row, canonical){
+  if(!row) return '';
+  const ak = headerMap[canonical];
+  if(ak && row.hasOwnProperty(ak)) return row[ak];
+  // extra fallbacks: try some common alternate keys directly
+  const fallbacks = {
+    clientname: ['Client Name','clientname','name'],
+    mobile: ['mobile','Mobile','phone'],
+    amount: ['amount','Amount','amt'],
+    date: ['date','Date'],
+    status: ['status','Status'],
+    remark: ['remark','Remark','notes']
+  };
+  const alts = fallbacks[canonical] || [];
+  for(const a of alts){
+    if(row.hasOwnProperty(a)) return row[a];
+  }
+  return '';
+}
+
+/* fetch data */
 async function fetchData(){
   try{
-    const res=await fetch(SHEETDB_API);
-    if(!res.ok)throw new Error('Fetch failed: '+res.status);
-    const data=await res.json();
-    lastData=Array.isArray(data)?data:[];
-    detectHeaders(lastData);
-    renderTable(lastData);
-  }catch(e){
-    console.error(e);
-    msg.textContent='Error loading data: '+e.message;
-  }
-}
-
-function renderTable(data){
-  const th=document.getElementById('tableHead');
-  const tb=document.getElementById('tableBody');
-  th.innerHTML='';tb.innerHTML='';
-  const titles={clientname:'Client Name',mobile:'Mobile',amount:'Amount',date:'Date',status:'Status',remark:'Remark'};
-  const headRow=document.createElement('tr');
-  Object.keys(titles).forEach(k=>{
-    const thcell=document.createElement('th');
-    thcell.textContent=titles[k];
-    headRow.appendChild(thcell);
-  });
-  th.appendChild(headRow);
-  const search=document.getElementById('searchBox').value.trim().toLowerCase();
-  const showOnlyPending=filterPending;
-  (data||[]).forEach(row=>{
-    const visible=Object.values(row).join(' ').toLowerCase().includes(search);
-    if(!visible)return;
-    if(showOnlyPending&&!String(row[headerMap['status']]||'').toLowerCase().includes('pending'))return;
-    const tr=document.createElement('tr');
-    canonical.forEach(k=>{
-      const td=document.createElement('td');
-      const actualKey=headerMap[k];
-      td.textContent=(actualKey && row[actualKey]!==undefined)?row[actualKey]:'';
-      tr.appendChild(td);
-    });
-    tb.appendChild(tr);
-  });
-}
-
-let refreshTimer=null,filterPending=false;
-reloadBtn.onclick=()=>{msg.textContent='Reloading…';fetchData().then(()=>msg.textContent='');};
-filterPendingBtn.onclick=e=>{filterPending=!filterPending;e.target.classList.toggle('btn',filterPending);e.target.classList.toggle('ghost',!filterPending);renderTable(lastData);};
-searchBox.oninput=()=>renderTable(lastData);
-refreshSel.onchange=e=>{
-  const v=Number(e.target.value);
-  if(refreshTimer){clearInterval(refreshTimer);refreshTimer=null;}
-  if(v>0)refreshTimer=setInterval(fetchData,v*1000);
-};
-
-addBtn.onclick=async()=>{
-  const name=f_name.value.trim(),
-        mobile=f_mobile.value.trim(),
-        amount=f_amount.value.trim(),
-        date=f_date.value.trim(),
-        status=f_status.value.trim(),
-        remark=f_remark.value.trim();
-  if(!name && !mobile){alert('Please provide at least Client Name or Mobile.');return;}
-  if(!Object.keys(headerMap).length)await fetchData();
-  const payloadObj={};
-  payloadObj[headerMap['clientname']||'clientname']=name||'';
-  payloadObj[headerMap['mobile']||'mobile']=mobile||'';
-  payloadObj[headerMap['amount']||'amount']=amount||'';
-  payloadObj[headerMap['date']||'date']=date||'';
-  payloadObj[headerMap['status']||'status']=status||'';
-  payloadObj[headerMap['remark']||'remark']=remark||'';
-  try{
-    const res=await fetch(SHEETDB_API,{
-      method:'POST',
-      headers:{'Content-Type':'application/json'},
-      body:JSON.stringify({data:[payloadObj]})
-    });
-    if(!res.ok)throw new Error(res.status);
-    msg.textContent='Added — reloading...';
-    ['f_name','f_mobile','f_amount','f_date','f_remark'].forEach(id=>document.getElementById(id).value='');
-    setTimeout(()=>fetchData().then(()=>msg.textContent=''),400);
+    document.getElementById('msg').textContent = 'Loading…';
+    const res = await fetch(SHEETDB_API);
+    if(!res.ok) throw new Error('Fetch failed: ' + res.status);
+    const json = await res.json();
+    rawRows = Array.isArray(json) ? json : (json.data || []);
+    detectHeaders(rawRows);
+    renderTable();
+    document.getElementById('msg').textContent = '';
   }catch(err){
     console.error(err);
-    alert('Network error adding row: '+err.message);
+    document.getElementById('msg').textContent = 'Error loading data — check API & console';
   }
-};
+}
 
+/* render table */
+function renderTable(){
+  const tableHead = document.getElementById('tableHead');
+  const tableBody = document.getElementById('tableBody');
+  tableHead.innerHTML = '';
+  tableBody.innerHTML = '';
+
+  // headers
+  const titles = { clientname:'Client Name', mobile:'Mobile', amount:'Amount', date:'Date', status:'Status', remark:'Remark' };
+  const headRow = document.createElement('tr');
+  Object.keys(titles).forEach(k => {
+    const th = document.createElement('th'); th.textContent = titles[k]; headRow.appendChild(th);
+  });
+  tableHead.appendChild(headRow);
+
+  const q = (document.getElementById('searchBox').value || '').trim().toLowerCase();
+
+  const rows = rawRows.filter(r => {
+    const hay = Object.values(r).join(' ').toLowerCase();
+    if(q && !hay.includes(q)) return false;
+    if(filterPending){
+      const st = (getCell(r,'status')||'').toString().toLowerCase();
+      if(!st.includes('pending')) return false;
+    }
+    return true;
+  });
+
+  if(!rows.length){
+    tableBody.innerHTML = '<tr><td colspan="7" style="text-align:center;padding:20px;color:var(--muted)">No records found</td></tr>';
+    return;
+  }
+
+  for(const r of rows){
+    const tr = document.createElement('tr');
+    const name = getCell(r,'clientname') || '';
+    const mobile = getCell(r,'mobile') || '';
+    const amount = getCell(r,'amount') || '';
+    const date = getCell(r,'date') || '';
+    const statusRaw = (getCell(r,'status') || '').toString().toLowerCase();
+    const remark = getCell(r,'remark') || '';
+
+    const statusHtml = statusRaw === 'paid'
+      ? `<span style="background:#d1fae5;color:#065f46;padding:4px 10px;border-radius:8px;font-weight:600">Paid</span>`
+      : `<span style="background:#fef3c7;color:#92400e;padding:4px 10px;border-radius:8px;font-weight:600">Pending</span>`;
+
+    tr.innerHTML = `
+      <td>${escapeHtml(name)}</td>
+      <td>${escapeHtml(mobile)}</td>
+      <td>${escapeHtml(amount)}</td>
+      <td>${escapeHtml(date)}</td>
+      <td>${statusHtml}</td>
+      <td>${escapeHtml(remark)}</td>
+      <td style="white-space:nowrap">
+        <button data-payload="${encodeURIComponent(JSON.stringify(r))}" data-action="edit" class="btn ghost">Edit</button>
+        <button data-payload="${encodeURIComponent(JSON.stringify(r))}" data-action="delete" class="btn ghost">Delete</button>
+      </td>
+    `;
+    tableBody.appendChild(tr);
+  }
+}
+
+/* escape helper */
+function escapeHtml(str){ if(str==null) return ''; return String(str).replace(/[&<>"']/g, ch=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[ch])); }
+
+/* add row (POST) + sanity check */
+async function addRow(){
+  const name = document.getElementById('f_name').value.trim();
+  const mobile = document.getElementById('f_mobile').value.trim();
+  const amount = document.getElementById('f_amount').value.trim();
+  const date = document.getElementById('f_date').value.trim();
+  const status = document.getElementById('f_status').value.trim();
+  const remark = document.getElementById('f_remark').value.trim();
+
+  if(!name && !mobile){ alert('Please enter Client Name or Mobile'); return; }
+
+  // prepare payload using headerMap (mapped to actual keys or canonical keys)
+  const payload = {};
+  payload[ headerMap['clientname'] || 'clientname' ] = name;
+  payload[ headerMap['mobile'] || 'mobile' ] = mobile;
+  payload[ headerMap['amount'] || 'amount' ] = amount;
+  payload[ headerMap['date'] || 'date' ] = date;
+  payload[ headerMap['status'] || 'status' ] = status;
+  payload[ headerMap['remark'] || 'remark' ] = remark;
+
+  try{
+    document.getElementById('msg').textContent = 'Adding…';
+    const res = await fetch(SHEETDB_API, {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ data: [ payload ] })
+    });
+    if(!res.ok){
+      const txt = await res.text();
+      throw new Error(txt || res.status);
+    }
+
+    // reload and sanity-check that the new row appears correctly
+    await fetchData();
+
+    // Check quickly by mobile or name presence in the fetched rows
+    const found = rawRows.some(r => {
+      const nameVal = getCell(r,'clientname') || '';
+      const mobileVal = getCell(r,'mobile') || '';
+      return (mobile && String(mobileVal).trim() === mobile) || (name && String(nameVal).trim() === name);
+    });
+
+    if(!found){
+      // warn user — we didn't find the new row where expected (likely header mismatch). Do not autorewrite sheet.
+      document.getElementById('msg').textContent = 'Added — but could not verify placement. Please check Sheet headers.';
+      console.warn('Added row but verification failed. headerMap:', headerMap, 'last payload:', payload, 'sample rows:', rawRows.slice(0,2));
+      return;
+    }
+
+    // success: clear form and show message
+    ['f_name','f_mobile','f_amount','f_date','f_remark'].forEach(id => document.getElementById(id).value = '');
+    document.getElementById('msg').textContent = 'Added ✓';
+    setTimeout(()=>document.getElementById('msg').textContent = '', 1800);
+  }catch(err){
+    console.error(err);
+    alert('Add failed — see console');
+    document.getElementById('msg').textContent = '';
+  }
+}
+
+/* Edit / Delete using event delegation (prompt-based) */
+document.getElementById('tableBody').addEventListener('click', async (ev) => {
+  const btn = ev.target.closest('button');
+  if(!btn) return;
+  const action = btn.dataset.action;
+  const payload = btn.dataset.payload ? JSON.parse(decodeURIComponent(btn.dataset.payload)) : null;
+  if(!payload) return;
+
+  // derive identifiers (prefer mobile)
+  const mobileVal = payload[ headerMap['mobile'] ] || payload.mobile || '';
+  const nameVal = payload[ headerMap['clientname'] ] || payload['Client Name'] || payload.clientname || '';
+
+  if(action === 'delete'){
+    if(!confirm('Delete: ' + (nameVal || mobileVal || 'this row') + ' ?')) return;
+    try{
+      let url;
+      if(mobileVal) url = SHEETDB_API.replace(/\/+$/,'') + '/mobile/' + encodeURIComponent(mobileVal);
+      else url = SHEETDB_API.replace(/\/+$/,'') + '/clientname/' + encodeURIComponent(nameVal);
+      const res = await fetch(url, { method: 'DELETE' });
+      if(!res.ok) throw new Error('Delete failed: ' + res.status);
+      await fetchData();
+    }catch(err){
+      console.error(err);
+      alert('Delete failed — check console');
+    }
+    return;
+  }
+
+  if(action === 'edit'){
+    const newName = prompt('Client name', nameVal) || nameVal;
+    const newMobile = prompt('Mobile', mobileVal) || mobileVal;
+    const newAmount = prompt('Amount', payload[ headerMap['amount'] ] || payload.amount || '') || (payload[ headerMap['amount'] ] || payload.amount || '');
+    const newDate = prompt('Date', payload[ headerMap['date'] ] || payload.date || '') || (payload[ headerMap['date'] ] || payload.date || '');
+    const newStatus = prompt('Status (paid/pending)', (payload[ headerMap['status'] ] || payload.status || 'pending')) || (payload[ headerMap['status'] ] || payload.status || 'pending');
+    const newRemark = prompt('Remark', payload[ headerMap['remark'] ] || payload.remark || '') || (payload[ headerMap['remark'] ] || payload.remark || '');
+
+    const patchObj = {};
+    patchObj[ headerMap['clientname'] || 'clientname' ] = newName;
+    patchObj[ headerMap['mobile'] || 'mobile' ] = newMobile;
+    patchObj[ headerMap['amount'] || 'amount' ] = newAmount;
+    patchObj[ headerMap['date'] || 'date' ] = newDate;
+    patchObj[ headerMap['status'] || 'status' ] = newStatus;
+    patchObj[ headerMap['remark'] || 'remark' ] = newRemark;
+
+    try{
+      let url;
+      if(mobileVal) url = SHEETDB_API.replace(/\/+$/,'') + '/mobile/' + encodeURIComponent(mobileVal);
+      else url = SHEETDB_API.replace(/\/+$/,'') + '/clientname/' + encodeURIComponent(nameVal);
+      const res = await fetch(url, {
+        method: 'PATCH',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ data: [ patchObj ] })
+      });
+      if(!res.ok) throw new Error('Update failed: ' + res.status);
+      await fetchData();
+    }catch(err){
+      console.error(err);
+      alert('Update failed — check console');
+    }
+    return;
+  }
+});
+
+/* UI bindings */
+document.getElementById('reloadBtn').addEventListener('click', fetchData);
+document.getElementById('searchBox').addEventListener('input', renderTable);
+document.getElementById('filterPendingBtn').addEventListener('click', (e)=>{ filterPending = !filterPending; e.target.classList.toggle('btn', filterPending); e.target.classList.toggle('ghost', !filterPending); renderTable(); });
+document.getElementById('refreshSel').addEventListener('change', (e)=>{ const v = Number(e.target.value); if(refreshTimer){ clearInterval(refreshTimer); refreshTimer = null; } if(v>0) refreshTimer = setInterval(fetchData, v*1000); });
+document.getElementById('addBtn').addEventListener('click', addRow);
+
+/* initial load */
 fetchData();
+
 </script>
 </body>
 </html>
